--- a/index.html
+++ b/index.html
@@ -11,33 +11,23 @@
     <meta name="google-site-verification" content="RqOYH5UBWT4DVyfEYHXjrPThEWNS7JcCI5ZiYnd-JW4" />
 
     <link rel="icon" type="image/x-icon" href="./favicon.ico">
-    <title>Ngram Type</title>
+    <title>Raushan Type</title>
 
-    <!-- jQuery required by Bootstrap. -->
-    <!-- https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js -->
     <script src="./assets/js/jquery-3.5.1.min.js"></script>
 
-    <!-- Darkly Bootstrap Theme! https://bootswatch.com/darkly/-->
-    <!-- https://bootswatch.com/4/darkly/bootstrap.min.css -->
     <link rel="stylesheet" type="text/css" href="./assets/css/bootstrap-4.6.2--darkly.min.css">
 
-    <!-- https://bootswatch.com/4/_vendor/bootstrap/dist/js/bootstrap.bundle.min.js -->
-    <script src="./assets/js/bootstrap-4.6.2.min.js"></script>
+     <script src="./assets/js/bootstrap-4.6.2.min.js"></script>
 
-    <!-- https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css -->
     <link rel="stylesheet" href="./assets/css/font-awesome-4.7.0.min.css">
 
     <link rel="stylesheet" type="text/css" href="./app.css">
 
-    <!-- Ngrams Sources. -->
     <script src="./ngrams/bigrams.js"></script>
     <script src="./ngrams/trigrams.js"></script>
     <script src="./ngrams/tetragrams.js"></script>
     <script src="./ngrams/words.js"></script>
 
-    <!-- VueJS -->
-    <!-- Should use the development/unminified version so that the Vue DevTools could be used. -->
-    <!-- https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js -->
     <script src="./assets/js/vue-2.6.12.js"></script>
 
     <!-- Timer -->
