--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- assets -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -13,13 +14,13 @@
     <link rel="icon" type="image/x-icon" href="./favicon.ico">
     <title>Raushan Type</title>
 
-    <script src="./assets/js/jquery-3.5.1.min.js"></script>
+    <script src="./compileanddesign/js/jquery-3.5.1.min.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="./assets/css/bootstrap-4.6.2--darkly.min.css">
+    <link rel="stylesheet" type="text/css" href="./compileanddesign/css/bootstrap-4.6.2--darkly.min.css">
 
-     <script src="./assets/js/bootstrap-4.6.2.min.js"></script>
+     <script src="./compileanddesign/js/bootstrap-4.6.2.min.js"></script>
 
-    <link rel="stylesheet" href="./assets/css/font-awesome-4.7.0.min.css">
+    <link rel="stylesheet" href="./compileanddesign/css/font-awesome-4.7.0.min.css">
 
     <link rel="stylesheet" type="text/css" href="./app.css">
 
@@ -28,11 +29,11 @@
     <script src="./ngrams/tetragrams.js"></script>
     <script src="./ngrams/words.js"></script>
 
-    <script src="./assets/js/vue-2.6.12.js"></script>
+    <script src="./compileanddesign/js/vue-2.6.12.js"></script>
 
     <!-- Timer -->
-    <script src="./assets/js/moment.min.js"></script>
-    <script src="./assets/js/ez.countimer.js"></script>
+    <script src="./compileanddesign/js/moment.min.js"></script>
+    <script src="./compileanddesign/js/ez.countimer.js"></script>
 
     <script>
         $(document).ready(function() {
